Corrected package name

--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
-name: Chain.Runnable
+name: FullScreenImage
 author: michalcharemza
 category: Media
-tags: [full screen, image, size, resize]
+tags: [full screen, image, size, resize, flash, actionscript]
 #demo: http://yetagain.net/plugins/chainrunnable/
